Swagger and api updated
