# src/Plugins/user/controller.js
@@ -1,8 +1,9 @@
 const _ = require('lodash');
 const Joi = require('joi');
 const User = require('../../models/user');
-const { handleSuccess, handleEmailSuccess } = require('../../utils/ResponseHandler');
+const { handleSuccess, handleEmailSuccess, handleFailure } = require('../../utils/ResponseHandler');
 const sentEmail = require('../../lib/mailer');
+const registerSchema = require('./schema/register.schema');
 
 /**
   * @method GetUser
@@ -35,20 +36,27 @@ const GetUser = async (req, res) => {
 const ForgetPassword = async (req, res) => {
     const getUsersSchema = Joi.object().keys({
         params: {
-            id: Joi.string().alphanum().min(24).required()
+            email: Joi.string().email().required()
         }
     })
     const isValid = Joi.validate({ params: req.params }, getUsersSchema);
     if (isValid.error) {
         res.send(isValid.error);
     }
-    const user = await User.findById(req.params.id);
+    const user = await User.findOne({ email: req.params.email });
     if (_.isEmpty(user)) {
         res.boom.notFound("User not found...");
     }
-    user.password = req.body.password;
-    const result = await user.save();
-    res.send(handleSuccess(result));
+    if (user.emailVerified === false) {
+        user.password = req.body.password;
+        user.emailVerified = true;
+        const result = await user.save();
+        res.send(handleSuccess(result));
+    }
+    else {
+        res.send(handleFailure("Link expired.."))
+    }
+
 }
 
 
@@ -72,6 +80,8 @@ const sendMail = async (req, res) => {
     if (_.isEmpty(user)) {
         res.boom.notFound("User not found...");
     }
+    user.emailVerified = false;
+    await user.save();
     const data = {
         email: user.email,
         url: `http://localhost:3000/forget/?email=${email}`,
@@ -83,4 +93,24 @@ const sendMail = async (req, res) => {
     }
 }
 
-module.exports = { GetUser, ForgetPassword, sendMail }
+/**
+  * @method RegUser
+  * @description To store the user details
+  */
+
+const updateUser = async (req, res) => {
+    const fileObj = {
+        imageLink: req.file.path
+    }
+    const isValid = registerSchema(req.body);
+    if (isValid.error) {
+        res.send(isValid.error);
+    }
+    _.assign(req.body, fileObj);
+    const result = await User.findOneAndUpdate({ email: req.params.email },
+        { $set: req.body },
+        { new: true });
+    res.send(handleSuccess(result));
+}
+
+module.exports = { GetUser, ForgetPassword, sendMail, updateUser }
